# cryptoinfo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README_fr.md  hacs.json  info.md  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  hacs.yml  hassfest.yml  release.yml  security-audit.yml  stale.yml
custom_components/cryptoinfo/: __init__.py  config_flow.py  coordinator.py  diagnostics.py  exceptions.py  hacs.json  helpers.py  icons.json  manifest.json  mining_sensor.py  sensor.py  strings.json
custom_components/cryptoinfo/const/: const.py
custom_components/cryptoinfo/helper/: blockchain_api.py  coingecko_api.py  crypto_info_data.py  storage_helper.py
custom_components/cryptoinfo/translations/: en.json  fr.json
example/: auto-entities  configuration.yaml
tests/: __init__.py  conftest.py  test_blockchain_api.py  test_coingecko_api.py  test_config_flow.py  test_const.py  test_coordinator.py  test_diagnostics.py  test_helpers.py  test_init.py  test_mining_sensor.py  test_sensor.py
