[project]
name = "cryptoinfo"
version = "1.8.2"
description = "Home Assistant integration for cryptocurrency information"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"
authors = [
    {name = "heyajohnny"},
]
maintainers = [
    {name = "foXaCe"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "D",      # pydocstyle
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "LOG",    # flake8-logging
    "N",      # pep8-naming
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]
ignore = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring
    "D205",   # 1 blank line required between summary line and description
    "D213",   # Multi-line docstring summary should start at the second line
    "D400",   # First line should end with a period
    "D415",   # First line should end with punctuation
    "TRY003", # Avoid specifying long messages outside the exception class
    "TRY300", # Consider moving statement to else block
    "TRY301", # Abstract raise to inner function
    "TRY400", # Use logging.exception instead of logging.error
    "RET503", # Missing explicit return at the end of function
    "RET505", # Unnecessary else after return
    "A001",   # Variable shadowing builtin (id)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Use of assert
    "D",      # Docstrings not required in tests
    "PT001",  # Use @pytest.fixture over @pytest.fixture() - conflicts with auto-fix
]
"custom_components/**/*.py" = [
    "E501",   # Line too long (legacy code)
    "RUF012", # Mutable class attributes without ClassVar
    "LOG002", # Use of logging module with positional args
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.cryptoinfo"]
force-sort-within-sections = true
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
show_error_codes = true
warn_unreachable = true
ignore_missing_imports = true
exclude = ["^.venv/"]
explicit_package_bases = true
mypy_path = "."
# Relaxed settings for legacy code
strict = false
# Ignore errors for legacy code patterns
disable_error_code = ["call-arg", "var-annotated", "assignment", "dict-item", "arg-type", "type-arg"]
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_unused_ignores = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_unreachable = false

[[tool.mypy.overrides]]
module = "homeassistant.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "custom_components.cryptoinfo.*"
# Very relaxed for legacy integration code
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_subclassing_any = false
# Ignore errors that occur due to missing HA stubs and legacy code patterns
disable_error_code = ["call-arg", "var-annotated", "assignment", "dict-item", "arg-type"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--cov=custom_components.cryptoinfo",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=10",
]

[tool.coverage.run]
source = ["custom_components/cryptoinfo"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
